# src/api/controllers/journeys.ts
@@ -1,6 +1,6 @@
 import * as express from 'express';
 import { StatusCodes } from 'http-status-codes';
-import {setJourney, dropOffJourney, locateJourney} from '@carpool/api/services/journeys';
+import {setJourney, dropOffJourney, locateJourney, setPendingJourneysToMemory} from '@carpool/api/services/journeys';
 import { writeJsonResponse } from '@carpool/utils/express';
 
 export async function journey(req: express.Request, res: express.Response):Promise<void>{
@@ -35,6 +35,17 @@ export function locate(req: express.Request, res: express.Response):void{
         writeJsonResponse(res, resLocate.statusCode, resLocate.statusCode === StatusCodes.OK ? resLocate.car : '');
     } catch (error) {
         console.log('Error locate journey');
+        writeJsonResponse(res, StatusCodes.BAD_REQUEST, '');
+    }
+}
+
+
+export async function setPendingJourneys(req: express.Request, res: express.Response):Promise<void>{
+    try {
+        let resSetJourney: StatusCodes = await setPendingJourneysToMemory(req.body);
+        writeJsonResponse(res, resSetJourney,'');
+    } catch (error) {
+        console.log('Error setting pending journeys:', error);
         writeJsonResponse(res, StatusCodes.BAD_REQUEST, '');
     }
 }
